# proxy-wasm-spike

./: README.md
examples/body-base-routing/: Cargo.toml  README.md  docker-compose.yaml  envoy.yaml
examples/body-base-routing/src/: lib.rs
examples/grpc_on_body/: README.md
examples/grpc_on_body/src/: lib.rs
examples/metrics/: Cargo.toml  README.md  docker-compose.yaml  envoy.yaml
examples/metrics/src/: lib.rs
examples/pipelining-wasm-filters/: Cargo.toml  README.md  docker-compose.yaml  envoy.yaml
examples/pipelining-wasm-filters/src/: lib.rs
examples/rapid_response/: README.md  envoy.yaml
examples/rapid_response/src/: lib.rs
examples/response_headers_on_response_body/: Cargo.toml  README.md  docker-compose.yaml
examples/response_headers_on_response_body/src/: lib.rs
