[package]
publish = false
name = "proxy-wasm-example-metrics"
version = "0.0.1"
authors = ["Eguzki Astiz Lezaun <eguzki.astiz@gmail.com>"]
description = "Proxy-Wasm plugin example: metrics"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
proxy-wasm = "0.2.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
