[package]
publish = false
name = "proxy-wasm-example"
version = "0.0.1"
authors = ["Eguzki Astiz Lezaun <eguzki.astiz@gmail.com>"]
description = "Proxy-Wasm plugin example: first in the filter chain"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
proxy-wasm = "0.2.3"
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
